<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>org.blynder</groupId>
	<artifactId>blynder</artifactId>
	<version>0.4</version>
	<packaging>jar</packaging>
	
	<name>Blynder</name>
	<description>
	A framework that allows the user to create desktop applications with web languages (HTML, JavaScript and
	CSS), swing and JavaFX.
	</description>
	<url>http://www.blynder.org/</url>
	
	<distributionManagement>
	  	<snapshotRepository>
	    	<id>ossrh</id>
	    	<url>https://oss.sonatype.org/content/repositories/snapshots</url>
	  	</snapshotRepository>
	  	<repository>
	    	<id>ossrh</id>
	    	<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
	  	</repository>
	</distributionManagement>
	
	<licenses>
		<license>
		    <name>MIT License</name>
		    <url>http://www.opensource.org/licenses/mit-license.php</url>
		</license>
	</licenses>
	
	<developers>
		<developer>
			<name>Alejandro Garcia</name>
			<email>alexgp1234@gmail.com</email>
			<organization>None</organization>
			<organizationUrl>http://www.blynder.org</organizationUrl>
		</developer>
	</developers>
	
	<scm>
		<connection>scm:git:git://github.com/AlexGPlay/Blynder.git</connection>
	  	<developerConnection>scm:git:ssh://github.com:AlexGPlay/Blynder.git</developerConnection>
	  	<url>http://github.com/AlexGPlay/Blynder/tree/master</url>
	</scm>
	
	<dependencies>
		 <dependency>
			 <groupId>org.thymeleaf</groupId>
			 <artifactId>thymeleaf</artifactId>
			 <version>3.0.11.RELEASE</version>
		 </dependency>
		 
		<dependency>
	        <groupId>org.slf4j</groupId>
	        <artifactId>slf4j-api</artifactId>
	        <version>1.7.25</version>
    	</dependency>
    	
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.10</version>
		</dependency>
		
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-databind</artifactId>
		    <version>2.10.3</version>
		</dependency>
		
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx</artifactId>
		    <version>14</version>
		    <type>pom</type>
		</dependency>
		
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-controls</artifactId>
		    <version>14</version>
		    <type>pom</type>
		</dependency>
		
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-fxml</artifactId>
		    <version>14</version>
		</dependency>
		
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-swing</artifactId>
		    <version>14</version>
		</dependency>
		
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-web</artifactId>
		    <version>14</version>
		</dependency>
		
		<dependency>
			 <groupId>jakarta.xml.bind</groupId>
			 <artifactId>jakarta.xml.bind-api</artifactId>
			 <version>2.3.3</version>
		</dependency>
    	
		<dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.12</version>
		    <scope>test</scope>
		</dependency>
    	
    	
	</dependencies>
  
	<build>
		<plugins>
			<plugin>    
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
			<plugin>
		  		<groupId>org.apache.maven.plugins</groupId>
			  	<artifactId>maven-source-plugin</artifactId>
			  	<executions>
			    	<execution>
			      		<id>attach-sources</id>
			      		<goals>
			        		<goal>jar</goal>
			      		</goals>
			    	</execution>
			  	</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
			  	<artifactId>maven-javadoc-plugin</artifactId>
			  	<executions>
			    	<execution>
			      		<id>attach-javadocs</id>
			      		<goals>
			        		<goal>jar</goal>
			      		</goals>
			    	</execution>
			  	</executions>
			</plugin>
      		<plugin>
        		<groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-gpg-plugin</artifactId>
        		<version>1.6</version>
        		<executions>
          			<execution>
            			<id>sign-artifacts</id>
            			<phase>verify</phase>
            			<goals>
             				 <goal>sign</goal>
            			</goals>
          			</execution>
        		</executions>
      		</plugin>
		</plugins>
	</build>
</project>